Revert "fix burger-menu invisible on page without MiniToc and SubNav"
This reverts commit d2487425d009cf769146ef3fbd2967db97d9ff45.

--- a/src/components/SubNavigation/SubNavigation.scss
+++ b/src/components/SubNavigation/SubNavigation.scss
@@ -124,9 +124,7 @@
     }
 
     &_invisible &__menu-button {
-        position: absolute;
-        right: 68px;
-
+        // TODO: придумать расположение кнопки меню в случае отсутствия минитоки
         margin-top: 8px;
     }
 }
